refactor: Extract ValidationResult to remove duplication
The ValidationResult static inner class was duplicated in both
BpmnValidationService and FhirValidationService.

This commit extracts the class into its own top-level public file,
ValidationResult.java, within the same package. Both service classes
now use this single, shared class.

This change eliminates code redundancy, improves maintainability, and
adheres to the DRY (Don't Repeat Yourself) principle.